# NeXTRust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  Xargo.toml  build-llvm-local.sh  check-ci-logs.sh  hooks  llvm-setup-status.md  monitor-ci.sh  requirements.txt  setup-github-remote.sh  simple-test.s  test.c  test.s
.cargo/: config.toml.backup
.claude/: budget-state.json  current-cwd  metrics.csv  settings.json
.claude/failure-tracking/: failures.json
.github/workflows/: ci-slash-commands.yml  lint-ai-guidance.yml  lint-gemini.yml  maintenance.yml  nextrust-ci.yml  pr-review.yml  quick-ci.yml  security-reminders.yml
ci/: local.env.template
ci/config/: model-pricing.json
ci/scripts/: README.md  add-argument-hints.sh  agent-ci-task.sh  agent-feedback-loop.sh  analyze-claude-usage.sh  analyze-failure.sh  budget-monitor.py  build-core-m68k.sh  build-core-manual.sh  build-custom-llvm-complete.sh  build-custom-llvm.sh  build-custom-rustc.sh  build-rust-1.77.sh  build-rust-target.sh  build-rust-toolchain.sh  build-rustc-phase1.sh  build-rustc-two-phase.sh  bump-ci-version.sh  check-ccusage.sh  check-m68k-itinerary.sh  check-m68k-perf.sh  check-m68k-sub.sh  check-m68k-subx.sh  check-m68k-trap.sh  correlate-token-usage.sh  emulator-test-harness.sh  gemini-cli-wrapper.sh  gemini-error-handler.sh  github-checks-update.sh  lint-claude-md.sh  lint-gemini-md.sh  match-known-issue.py  match-known-issue.py.bak  metrics-dashboard.py  monitor-costs.sh  nextrust  previous-emulator-wrapper.sh  request-ai-service.sh  request-design.sh  request-review.sh  (+25 more)
docs/: README.md  ai-activation-checklist.md  ai-activation-playbook.md  ai-activation-summary.md  build-status.md  ci-limitations.md  progress-report-2025-07-22.md  progress-summary-2025-07-21-v2.md  progress-summary-2025-07-21.md  progress-summary-2025-07-22.md  project-status-summary.md  project-status.md  rust-1.77-build-guide.md  toolchain-modifications.md
docs/ai/: claude-code-1.0.54-guidelines.md
docs/applications/: nextstep-web-browser.md
docs/ci-status/: known-issues.json  pipeline-log.json  pipeline-log.md  pipeline-status.md
docs/core/: architecture-design.md  gemini-review-prompt.txt  library-porting.md  llvm-enhancements.md  llvm-workarounds.md  m68k-rustc-crash-resolution-report.md  m68k-scheduling-completion-report.md  m68k-scheduling-model.md  project-plan.md  rust-target-spec.md
docs/fixes/: blocking-issues-resolution.md
docs/gpu/: fpga-next-gpu.md  gpu-init-hybrid-architecture.md  gpu-init-implementation-guide.md  gpu-init-json-schema.md  gpu-rom-init-pipeline.md  nextbus-pci-bridge-gpu.md  nextgpu-webgpu-implementation.md
docs/hardware/: dsp-framework.md  dsp-transcendental-functions.md  i860-gpu-simulations.md  m68k-instruction-set-evolution.md  nextdimension-acceleration.md  postscript-interpreter-options.md
docs/implementation/: nextstep-sys-progress.md
docs/infrastructure/: README.md  ci-architecture-overview.md  ci-pipeline.md  ci-slash-commands.md  openai-setup.md  target-os-versions.md
docs/llvm-enhancements/: README.md  (+7 more)
hooks/: dispatcher-v2.sh  dispatcher.sh  stop-handler.sh
src/crates/nextstep-alloc/: Cargo.toml
src/crates/nextstep-alloc/src/: lib.rs
src/crates/nextstep-atomics/: Cargo.toml
src/crates/nextstep-atomics/src/: lib.rs
src/crates/nextstep-sys/: Cargo.toml  build.rs
src/crates/nextstep-sys/examples/: test-basic.rs
src/crates/nextstep-sys/src/: lib.rs
src/examples/nextstep-browser/: Cargo.toml  README.md
src/examples/nextstep-browser/src/: browser.rs  css_parser.rs  html_parser.rs  layout.rs  main.rs  network.rs  postscript_renderer.rs
src/examples/rs-hello-m68k/: Cargo.toml
src/examples/rs-hello-m68k/src/: main.rs
target-specs/: m68k-next-nextstep-noscheduler.json
targets/: m68k-next-nextstep.json  m68k-next-nextstep.json.old
test-results/: test-results-20250723_185125.json
tests/: atomic_smoke.rs
(+94 files in other folders)
