[workspace]
members = [
    "src/crates/nextstep-sys",
]

[package]
name = "nextrust-examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hello"
path = "src/examples/hello.rs"

[[example]]
name = "hello-simple"
path = "src/examples/hello-simple.rs"

[[test]]
name = "atomic_smoke"
path = "tests/atomic_smoke.rs"

[dependencies]
nextstep-sys = { path = "src/crates/nextstep-sys" }